  * minor incompatible change: (SETF CLASS-NAME) and (SETF
    GENERIC-FUNCTION-NAME) are no longer generic functions, and
    therefore are not customizeable by user code (as seems to be at
    least permitted and maybe required by AMOP).  As a consolation,
    however, the SBCL implementation of these functions now calls
    REINITIALIZE-INSTANCE as specified by AMOP.
  * bug fix: it is now possible to have more than one subclass of
    STANDARD-GENERIC-FUNCTION without causing stack overflow.
    (reported by Bruno Haible, Pascal Costanza and others)
  * bug fix: the dependent update protocol now works for generic
    functions.  (thanks to Gerd Moellmann; reported by Bruno Haible
    and Pascal Costanza)
  * bug fix: *COMPILE-FILE-PATHNAME* now contains the user's pathname
    merged with *DEFAULT-PATHNAME-DEFAULTS*.
  * optimization: performance improvements to IO on file streams of
    :ELEMENT-TYPE CHARACTER
  * optimization: much faster memory allocation on x86-64

changes in sbcl-0.9.6 relative to sbcl-0.9.5:
  * bug fix: add a workaround to SBCL looping infinitely at startup on
    Linux kernels with apparently buggy implementations of personality().
    (thanks to Svein Ove Aas)
  * bug fix: Unicode symbols are correctly printed in LDB backtraces
    (thanks to David Lichteblau)
  * bug fix: local bindings shadow global symbol macros for
    macroexpansion.  (reported by Matthew D Swank on comp.lang.lisp)
  * optimization: non-open coded uses of numeric comparison operators
    (e.g. >) no longer cons when called with more than one parameter
    on platforms supporting dynamic-extent allocation.
  * enhancement: saving cores with foreign code loaded is now supported
    on MIPS/Linux in addition to the previously supported platforms.
  * bug fix: FIND-RESTART now tests for activity, not applicability when given
    a restart object as identifier. (reported by Helmut Eller for CMUCL)
  * bug fix: division by zero in sb-sprof when no samples were collected