@@ -968,25 +968,25 @@ Except see also BREAK-VICIOUS-METACIRCLE.  -- CSR, 2003-05-28
 
 (defun accessor-miss (gf new object dfun-info)
   (let ((wrapper (wrapper-of object))
-	(previous-miss (assq gf *accessor-miss-history*)))
+        (previous-miss (assq gf *accessor-miss-history*)))
     (when (eq wrapper (cdr previous-miss))
       (error "~@<Vicious metacircle:  The computation of a ~
               dfun of ~s for argument ~s uses the dfun being ~
               computed.~@:>"
-	     gf object))
+             gf object))
     (let* ((*accessor-miss-history* (acons gf wrapper *accessor-miss-history*))
-	   (ostate (type-of dfun-info))
-	   (otype (dfun-info-accessor-type dfun-info))
-	   oindex ow0 ow1 cache
-	   (args (ecase otype
-		   ((reader boundp) (list object))
-		   (writer (list new object)))))
+           (ostate (type-of dfun-info))
+           (otype (dfun-info-accessor-type dfun-info))
+           oindex ow0 ow1 cache
+           (args (ecase otype
+                   ((reader boundp) (list object))
+                   (writer (list new object)))))
       (dfun-miss (gf args wrappers invalidp nemf ntype nindex)
-	;; The following lexical functions change the state of the
-	;; dfun to that which is their name.  They accept arguments
-	;; which are the parameters of the new state, and get other
-	;; information from the lexical variables bound above.
-	(flet ((two-class (index w0 w1)
+        ;; The following lexical functions change the state of the
+        ;; dfun to that which is their name.  They accept arguments
+        ;; which are the parameters of the new state, and get other
+        ;; information from the lexical variables bound above.
+        (flet ((two-class (index w0 w1)
                (when (zerop (random 2)) (psetf w0 w1 w1 w0))
                (dfun-update gf
                             #'make-two-class-accessor-dfun
